# computervision

./: .gitignore  CMakeLists.txt  README.md
sample/: CMakeLists.txt  add_image.cpp  add_image.h  blend_image.cpp  blend_image.h  canais.cpp  concatena.cpp  concatenate.cpp  concatenate.h  crop.cpp  crop.h  gaussian_noise.cpp  gaussian_noise.h  main.cpp  recortar.cpp  ruido.cpp  sal.cpp  scalar_image.cpp  scalar_image.h  sp_noise.cpp  sp_noise.h  teste.cpp  teste2.cpp  threshold.cpp  threshold.h
sample/libs/: funcoes.hpp
sample/src/: funcoes.cpp
